[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Scenes/Actors/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/mov_walk_empty.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/mov_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/mov_turn_empty.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.1695, 15.0608 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "moving",
"speed": 6.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "idleToMoving",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 40.1008, 67.8235 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 1 )

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 34 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 13 )
animation = "idleToMoving"

[node name="InteractableArea" type="Area2D" parent="."]
modulate = Color( 0.0784314, 0.917647, 0.14902, 1 )
position = Vector2( -20, 34 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="InteractableAreaCollisionShape" type="CollisionShape2D" parent="InteractableArea"]
shape = SubResource( 14 )
[connection signal="body_entered" from="InteractableArea" to="." method="_on_InteractableArea_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_InteractableArea_body_exited"]
